--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,18 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+     
+
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Necesito acceso a la Galería para seleccionar fotos</string>
+
+	<key>NSCameraUsageDescription</key>
+	<string>Necesito Acceso a la Camara para tomar fotos</string>
+
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Necesito Acceso al Microfono para grabar video</string>
+
+
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
 	<key>CFBundleDevelopmentRegion</key>
